Fix timestamp alignment in calendar dropdown

--- a/app/assets/stylesheets/components/_calendar.css.sass
+++ b/app/assets/stylesheets/components/_calendar.css.sass
@@ -58,7 +58,6 @@
 
         section.time
           float: right
-          line-height: 1.75rem
           font-size: .8rem
 
         &.event-in-progress
